# catcat

./: .env.bak  .gitignore  9arm.txt  CLAUDE.md  Cargo.toml  MIGRATE_CONTINUE.md  NEW_PROJECT_PLAN.md  WebRTC P2P.txt  catcat.md.bak  catcat.txt  db_backup.sql  fix-cloudflared.ps1  panda-roadmap.md  start.ps1  startserver.ps1  stop.ps1  stopserver.ps1  workflow.md  วิธีแก้ cloudflare.txt
back/: config.example.php
back/db/: migrate_activity_logs.sql  schema.sql  seed.php
back/lib/: adb.php  auth.php  db.php
docker/: .env.example  README.md  docker-compose.yml  gen-certs.ps1
docker/cloudflared/: config.yml
docker/coturn/: turnserver.conf
docker/nginx/: empty.conf
docker/nginx/templates/: catcat.conf.template  panda.conf.template
docker/php/: Dockerfile  zz-pool.conf
front/example/front/: cloud_dashboard.html
front/public/: admin_dashboard.php  auth_check.php  cloud_dashboard.php  focus.php  index.php  key.php  login.php  logout.php  metrics.php  ping.php  register.php  rent.php  session.php  thumb.php  topup.php
server/: .env.example  Cargo.toml
server/src/: main.rs
server/src/adb/: mod.rs
server/src/scrcpy/: mod.rs
server/src/stream/: mod.rs
src/: main.rs
src/adb/: mod.rs
src/scrcpy/: mod.rs
static/: index.html
