[package]
name = "catcat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catcat"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-routing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
which = "6"
dotenvy = "0.15"
